--- a/style.css
+++ b/style.css
@@ -8,10 +8,34 @@ box-sizing: border-box;
 
 body{
     display: grid;
-    grid-template-columns: 100%;
-    grid-template-rows: repeat(5,1fr);
+    grid-template-columns: 1440px;
+    grid-template-rows: 96px 292px 292px 292px 292px;
+    margin: 0 auto;
+    justify-content: center;
 }
 
 body > *{
     border:1px solid black;
+}
+
+nav{
+    
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 55px;
+}
+
+nav,
+ul{
+    display: flex;
+    justify-content: space-between;
+}
+
+nav ul li{
+    list-style: none;
+    margin: 0 13px;
+}
+
+nav ul li a{
+    text-decoration: none;
 }
